--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -33,7 +33,10 @@ h1, h2, h3{
   }
 
   
-
+.sh {
+  box-shadow: 2px 2px 8px #171717,
+  -2px -2px 8px #171717;
+}
 
   
   
@@ -41,7 +44,7 @@ h1, h2, h3{
     color: #4a4a6c;
   }
   
-    @media (min-width: 576px) {
+    @media (min-width: 948px) {
   //     main{
    
   //   display: flex;
@@ -61,6 +64,7 @@ h1, h2, h3{
     display: flex;
     justify-content: space-between;
     align-items:flex-start;
+    
     img{
     border-radius: 20px;
     margin: 0.5rem 2rem;
@@ -76,12 +80,17 @@ h1, h2, h3{
 
   .tips{
     margin: 0 4rem;
+    
   }
+
+   #fonti{
+  margin: 2rem 10rem 3rem 10rem;
+}
 
     }
 
 
-    @media (max-width: 576px){
+    @media (max-width: 948px){
       article{
         margin: 1rem 1rem;
       }
@@ -101,6 +110,9 @@ h1, h2, h3{
   }
           
         }
+        #fonti{
+  margin-left: 2rem;
+}
 
 
     }
@@ -118,7 +130,7 @@ h1, h2, h3{
     border: solid 3px rgb(119, 110, 98);
     border-radius: 20px;
     padding: 1rem 2rem;
-    margin-bottom: 1rem;
+    margin-bottom: 4rem;
   }
 
   
@@ -154,9 +166,7 @@ h1, h2, h3{
     max-width: 80%;
   }
 
-#fonti{
-  margin-left: 2rem;
-}
+
 
 footer {
   padding: 1rem 0;
