--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -141,6 +141,18 @@ footer {
   display: flex;
   justify-content: space-around;
   align-content: center;
+  padding: 1rem 5rem;
+}
+footer .disclaimer {
+  width: 60%;
+}
+footer .social a {
+  margin-left: 1rem;
+  display: flex;
+  justify-content: flex-start;
+  align-items: baseline;
+  gap: 1rem;
+  color: #ebedf2;
 }
 
 /*# sourceMappingURL=style.css.map */
